# daw_thunk

./: CMakeLists.txt  readme.md
cmake/: daw-thunkConfig.cmake.in
cmake/test_project/: CMakeLists.txt  test.cpp
include/daw/: daw_erased_callable.h  daw_function_traits.h  daw_thunk.h
include/daw/thunk/: daw_thunk_posix.h  daw_thunk_win.h
include/daw/thunk/impl/: thunk_aapcs64.h  thunk_arch.h  thunk_impl.h  thunk_sysv_x64.h  thunk_sysv_x86.h  thunk_win_x64.h  thunk_win_x86.h
src/daw/: thunk.cpp
tests/: CMakeLists.txt
tests/cmake/: test_compiler_options.cmake
tests/src/: daw_thunk_test.cpp  signal_test.cpp  stateful_currying_test.cpp
